src/components/textSlider/TextSlider.module.sass
@import ../../styles/helpers
@import ../../styles/colors

.container
    max-width: 1150px

.wrap
    margin: 0 -12px
    text-align: center

.logo
    display: inline-block
    margin-bottom: 56px

.title
    margin-bottom: 40px
    padding-bottom: 40px
    border-bottom: 1px solid $gray4
    font-size: 40px
    line-height: 1.2
    font-weight: 300
    letter-spacing: -0.4px
    +m
        font-size: 32px
    +dark
        border-color: $gray

.alt_title
    color: $black
    +dark
        color: $white

.author
    margin-bottom: 4px
    font-weight: 600
    font-size: 16px

.position
    +caption-1
    color: $gray2
    font-weight: 400

